--- a/src/styles/blocks/page/page.css
+++ b/src/styles/blocks/page/page.css
@@ -5,7 +5,7 @@
 @import url(../header/header.css);
 @import url(../pointer/pointer.css);
 @import url(../null-request/null-request.css);
-@import url(../search-bg/search-bg.css);
+@import url(../request-components/request-components.css);
 @import url(../preloader/preloader.css);
 @import url(../result-request/result-request.css);
 @import url(../button/__show-news/button__show-news.css);
