--- a/src/styles/blocks/result-request/news-list/card/__description/__title/card__title.css
+++ b/src/styles/blocks/result-request/news-list/card/__description/__title/card__title.css
@@ -4,24 +4,18 @@
     font-size: 26px;
     line-height: 30px;
     color: #1A1B22;
-    height: 9em;
-    overflow: hidden;
-
     width: 95%;
-    margin: 5px 0 0;
+    height: 4.5em;
+    margin: 10px 0;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
 
 @media (max-width: 800px) {
     .card__title {
         font-size: 22px;
         line-height: 24px;
-        height: 3.3em;
         margin: 5px 0;
-    }
-}
-
-@media (max-width: 370px) {
-    .card__title {
-        height: 3.3em;
     }
 }
