--- a/src/styles/blocks/null-request/null-request.css
+++ b/src/styles/blocks/null-request/null-request.css
@@ -1,13 +1,15 @@
 @import url(./__img/null-request__img.css);
 @import url(./__message/null-request__message.css);
 @import url(./__status/null-request__status.css);
+@import url(./_is-opened/null-request_is-opened.css);
 
 .null-request{
-    height: 374px;
-    display: flex;
+    padding-top: 40px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-	background-color:#F5F6F7;
+    background-color:#F5F6F7;
+
+    display: none;
 }
