--- a/src/styles/blocks/preloader/preloader.css
+++ b/src/styles/blocks/preloader/preloader.css
@@ -1,9 +1,9 @@
 @import url(./__circle/preloader__circle.css);
 @import url(./__status/preloader__status.css);
+@import url(./_is-opened/preloader_is-opened.css);
 
 .preloader{
    
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -11,5 +11,7 @@
 	height: 282px;
 	background-color:#F5F6F7;
 	
-	overflow: hidden;
+    overflow: hidden;
+    
+    display: none;
 }
