--- a/src/styles/blocks/search-block/__area/__form/__input/search__input.css
+++ b/src/styles/blocks/search-block/__area/__form/__input/search__input.css
@@ -15,12 +15,14 @@
     
 }
 
-.search__input::placeholder {
-    color: #B6BCBF;
+.search__input:focus {
+    border: 2px solid #347EFF;
+    background: white;
 }
 
 @media (max-width: 475px) {
     .search__input {
-        margin-top: 10px;
+        margin: 0;
+
     }
 }
