--- a/src/styles/blocks/search-block/__area/__subtitle/search__subtitle.css
+++ b/src/styles/blocks/search-block/__area/__subtitle/search__subtitle.css
@@ -6,22 +6,29 @@
     line-height: 24px;
     color: #FFFFFF;
 
-    margin-bottom: 80px;
+    margin: 80px 0;
 }
 
+@media (max-width: 1240px) {
+    .search__subtitle {
+        font-size: 18px;
+        line-height: 24px;
 
+        margin: 60px 0;
+    }
+}
 
 @media (max-width: 900px) {
     .search__subtitle {
         font-size: 18px;
         line-height: 24px;
 
-        margin-bottom: 40px;
+        margin: 40px 0;
     }
 }
 
 @media (max-width: 768px) {
     .search__subtitle {
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
 }
