--- a/src/styles/blocks/button/__show-news/button__show-news.css
+++ b/src/styles/blocks/button/__show-news/button__show-news.css
@@ -8,6 +8,6 @@
 
 .button__show-news:hover{
     color: black;
-    background-color: rgb(241, 241, 241);
-    opacity: 0.9;
+    background-color: rgb(211, 235, 240, .2);
+    border: rgb(162, 223, 231);
 }
