--- a/src/styles/blocks/chart/__container/__block/__item/__pipe/chart__pipe.css
+++ b/src/styles/blocks/chart/__container/__block/__item/__pipe/chart__pipe.css
@@ -1,29 +1,9 @@
 .chart__pipe{
     margin-left: 45px;
     height: 24px;
+    width: 0;
+    color: white;
     background-color: #2F71E5;
-}
-
-.chart__item:first-of-type .chart__pipe{
-    width: 15%;
-}
-.chart__item:nth-of-type(2) .chart__pipe{
-    width: 18%;
-}
-.chart__item:nth-of-type(3) .chart__pipe{
-    width: 11%;
-}
-.chart__item:nth-of-type(4) .chart__pipe{
-    width: 39%;
-}
-.chart__item:nth-of-type(5) .chart__pipe{
-    width: 45%;
-}
-.chart__item:nth-of-type(6) .chart__pipe{
-    width: 73%;
-}
-.chart__item:nth-of-type(7) .chart__pipe{
-    width: 34%;
 }
 
 @media (max-width: 600px) {
