--- a/src/styles/blocks/chart/__container/__block/__item/__pipe/chart__pipe.css
+++ b/src/styles/blocks/chart/__container/__block/__item/__pipe/chart__pipe.css
@@ -1,9 +1,17 @@
 .chart__pipe{
     margin-left: 45px;
     height: 24px;
-    width: 0;
-    color: white;
-    background-color: #2F71E5;
+    
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    color: #B6BCBF;
+    padding: 5px;
+
 }
 
 @media (max-width: 600px) {
