--- a/src/styles/blocks/page/page.css
+++ b/src/styles/blocks/page/page.css
@@ -3,6 +3,7 @@
 @import url(../button/button.css);
 @import url(../search-block/search-block.css);
 @import url(../header/header.css);
+@import url(../nav/nav.css);
 @import url(../pointer/pointer.css);
 @import url(../null-request/null-request.css);
 @import url(../request-components/request-components.css);
