--- a/src/styles/blocks/chart/__container/__scale/chart__scale.css
+++ b/src/styles/blocks/chart/__container/__scale/chart__scale.css
@@ -1,6 +1,6 @@
 @import url(./_none/chart__scale_none.css);
 .chart__scale{
-    width: 100%;
+    width: 95%;
     padding-left: 90px;
     border-top: 3px solid #B6BCBF;
 
@@ -9,6 +9,12 @@
     justify-content: space-between;
 
     list-style: none;
+}
+
+@media (max-width: 900px) {
+    .chart__scale {
+        width: 90%;
+    }
 }
 
 @media (max-width: 650px) {
