--- a/src/styles/blocks/result-request/news-list/card/card.css
+++ b/src/styles/blocks/result-request/news-list/card/card.css
@@ -2,6 +2,7 @@
 @import url(./__description/card__description.css);
 
 .card{
+    max-width: 95%;
     text-decoration: none;
     background-color: white;
     border-radius: 10px;
@@ -9,4 +10,4 @@
 
 .card:hover{
     box-shadow: 5px 10px 20px rgba(129, 178, 216, 0.8);
-  }
+}
